Tweaked some spacing & padding issues

--- a/resound-radio/style.css
+++ b/resound-radio/style.css
@@ -4,7 +4,7 @@ Theme URI: http://www.resoundradio.com
 Author: Dan Robinson
 Author URI: http://danrobinsonmedia.com
 Description: Theme designed for Resound Radio. Based on Underscores (http://underscores.me).
-Version: 1.0.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: resound-radio
@@ -373,6 +373,7 @@ html {
 	box-sizing: border-box;
     position: relative; /* so that we can absolutely position things off the bottom of the page and not off the bototm of the window */
     min-height: 100%; /* so our background looks legit even if there's not a ton of content */
+    padding-bottom: 80px;
 }
 
 *,
@@ -601,7 +602,7 @@ textarea {
     background: rgba(15,15,15,1);
     padding: 1rem;
     
-    line-height: 32px;  
+    line-height: 32px;
 }
 
 #footer-links {
@@ -927,7 +928,11 @@ a:active {
 .segment {
     background: rgba(37,37,37,1);
     border-left: 2px solid lightgrey;
-    padding: 1rem;
+    padding: 3rem;
+}
+
+.segment *:first-child {
+    margin-top: 0;
 }
 
 .contentwidth {
